--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,1 +1,10 @@
-New Action View
+<form action="/users" method="post" accept-charset="UTF-8">
+	<input type="hidden" name="authenticity_token" value ="<%= form_authenticity_token %>">
+	<label for="username">Username:</label>
+	<input type="text" name="user[username]"><br>
+	<label for="email">Email:</label>
+	<input type="text" name="user[email]"><br>
+	<label for="password">Password:</label>
+ 	<input type="password" name="user[password]"><br>
+	<input type="submit" value="Submit">
+</form>
