--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -9,7 +9,7 @@
  	<input type="password" name="user[password]"><br>
 	<input type="submit" value="Submit">
 </form>
--->
+
 
 <%= form_tag("/users", method: "post") do %>
 	<%= label_tag(:username, "Username:") %>
@@ -19,4 +19,18 @@
 	<%= label_tag(:password, "Password") %>
 	<%= password_field_tag(:password) %>
 	<%= submit_tag("Submit") %>
+<% end %>
+
+-->
+
+<%= form_for @user do |f| %>
+	<%= f.label(:username, "Your username here")%>
+	<%= f.text_field :username %><br />
+
+	<%= f.label :email %>
+	<%= f.text_field :email, :value => "example@example.com" %><br />
+
+	<%= f.label :password %>
+	<%= f.password_field :password %><br />
+	<%= f.submit "Submit" %>
 <% end %>
