error messages showing with small css style

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,13 @@
 <html>
   <head>
     <title>ReFormer</title>
+    <style>
+	.field_with_errors{
+		padding: 2px;
+		background-color: red;
+		display: table;
+	}
+    </style>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
